# anti-lameness-engine

./: AUTHORS  BUG-REPORTING  ChangeLog  Changelog  Makefile  Makefile.am  NEWS  README  TODO  VERSION  accel.cc  accel.h  ale  ale.c  ale.cc  ale_accum.h  ale_fixed.h  ale_math.h  ale_pos.h  ale_real.h  align.cc  align.h  bootstrap  channel.h  combine.h  configure.in  d2.cc  d2.h  d3.cc  d3.h  drizzle.h  gpt.h  gpu.cc  gpu.h  help.h  hf-filter.h  hf_filter.h  image.h  image_rw.cc  image_rw.h  (+18 more)
bugs/: issue-01112e06e10cac3163007ba11f9669d8622354c2.yaml  issue-04cc4af88b69b9b3dd849ad23d54378932922903.yaml  issue-0bf611da78693eae8577a617b3c6cebd4e57568f.yaml  issue-182ed17fbe2e1784b9907b3484b119bf39196d33.yaml  issue-2810156335ab109af9f815ee371357c34da97136.yaml  issue-3c1ccca509f098b4796388fad51096fbb4a912cf.yaml  issue-481be2934bea60484c3f8c0d1824757e1d0b83b6.yaml  issue-4abd30adf7b4d731e2b12bbce73f58bf5f68e094.yaml  issue-4bcb1e64de1b6ec60b100350f32e8f98ea7f0279.yaml  issue-60787d732c84d75772b3aab17a43b2ccae6f407a.yaml  issue-778d1e3305e6cf6dd72d9836499e1788ca686f67.yaml  issue-8f36cd6c86489cdaa7349beb2277e947a5d0558a.yaml  issue-8ffa5cdb90b3f4ec2d4989f324f198d6fd550e37.yaml  issue-918a69e36da1549cf255704c3b9a74a71a6f2ead.yaml  issue-96baab55cd9695aea25bc55c4653dcabb05cbc72.yaml  issue-ac0c28cbaf03d4bbc5bd255e449625b38a876638.yaml  issue-b0092e728694913d960d693fd9e56aeb94d3ae03.yaml  issue-b91c70dec1259b631907eb3fe7e77859bbdc6024.yaml  issue-cab7325d15520590f791a0e9fd93cbbcf5c9434d.yaml  issue-ceffea60803a2074772a3b4a2ce45708e4b46590.yaml  issue-d279fa0d83212136ed7fd67e1ea69ef663707282.yaml  issue-e47983ba64945ceb9ea741af4d32bccc302586db.yaml  issue-ec7a9aea4ad735dc6d5e00fe93335cc4b93f7801.yaml  issue-f592eb1a518b62d991b9e93d012d421ae4458c54.yaml  issue-f6edb857d25f28a70e00f6086860f70ab616bb88.yaml  issue-fe69b6ceefef3805e29190e1040f9278be84b1f8.yaml  project.yaml
d2/: align.cc  align.h  exclusion.h  filter.h  gpt.h  image.cc  image.h  image_accel.h  image_ale_real.h  image_bayer_ale_real.h  image_rw.cc  image_rw.h  image_weighted_avg.h  image_weighted_median.h  image_weighted_simple.h  image_zero.h  pixel.h  pixel_accum.h  point.h  ppm.h  render.cc  render.h  render_parse.h  spixel.h  tfile.cc  tfile.h  trans_abstract.h  trans_multi.cc  trans_multi.h  trans_single.h  transformation.h  vise.h  vise_core.cc  vise_core.h
d2/exposure/: exposure.cc  exposure.h  exposure_boolean.h  exposure_default.h  exposure_linear.h
d2/filter/: box.h  filter.h  gauss.h  lanczos.h  mult.h  scaled_filter.h  sinc.h  ssfe.h  triangle.h  zero.h
d2/render/: combine.h  drizzle.h  incremental.h  invariant.h  ipc.h  merge.h  usm.h  zero.h
d2/render/psf/: ale-psf-calibrate  backprojector.h  box.h  circle.h  convolution.h  gauss.h  normalizer.h  psf.h  psf_calibrate.h  psf_parse.h  psf_template.h  raster.h  rasterizer.h  scalar_mult.h  sgauss.h  stdin.h  stdin_vg.h  sum.h
d2/vise/: ma.h  sf.h
d3/: align.cc  align.h  cpf.cc  cpf.h  et.h  focus.cc  focus.h  point.h  pt.h  render.h  scene.cc  scene.h  space.cc  space.h  tfile.h  view.h
device/: canon_300d_raw_linear.h  canon_300d_raw_linear_50mm_1_4.h  canon_300d_raw_linear_50mm_1_4_1_4.h  canon_300d_raw_linear_50mm_1_8.h  canon_300d_raw_linear_85mm_1_8.h  nikon_d50.h  ov7620_raw_linear.h  xvp610_320x240.h  xvp610_640x480.h
doc/: COPYING  Makefile  ale-doc.xsl  generate  index.xml  make-changelog  make-infos  package-info.xml  pre-darcs-ls-lR  taxonomy.xml  taxonomy.xmli
doc/html-original/ALE/bugs/: index.html
doc/html-original/ALE/download/ale-0.5.1-tech/alignment/: index.html
doc/html-original/ALE/download/ale-0.5.1-tech/drizzling/: index.html
doc/html-original/ALE/download/ale-0.5.1-tech/enhance/: index.html
doc/html-original/ALE/download/ale-0.5.1-tech/merging/: index.html
doc/html-original/ALE/download/ale-0.5.1-user/alignment/: index.html
doc/html-original/ALE/download/ale-0.6.0-tech/iterative/: index.html
doc/html-original/ALE/download/ale-0.6.0-tech/merging/: index.html
doc/html-original/ALE/download/ale-0.7.x-tech/alignment/: index.html
doc/html-original/ALE/download/ale-0.7.x-tech/certainty/: index.html
doc/html-original/ALE/download/ale-0.7.x-tech/chain/: index.html
doc/html-original/ALE/download/ale-0.8.x-user/: index.html
doc/html-original/ALE/user/: index.html
doc/localhost/ALE/benchmarks/: index.html
doc/localhost/ALE/download/ale-0.5.1-tech/: index.html
doc/localhost/ALE/download/ale-0.5.1-user/: index.html
doc/localhost/ALE/download/ale-0.6.0-tech/: index.html
doc/localhost/ALE/download/ale-0.6.0-user/: index.html
doc/localhost/ALE/download/ale-0.7.x-tech/: index.html
doc/localhost/ALE/download/ale-0.7.x-user/: index.html
doc/localhost/ALE/download/ale-0.7.x-user/3d/: index.html
doc/localhost/ALE/tech/: index.html
doc/man/: ale.1.txt
doc/package/: index.xml
doc/package/bugs/: index.xml
doc/package/changelog/: index.in  index.xml.example
doc/package/news/: index.xml
doc/package/readme/: index.xml
doc/package/todo/: index.xml
doc/technical/: index.xml
doc/tutorial/: index.xml
doc/user/: index.xml
doc/user/3d/: index.xml
doc/user/alignment/: index.xml
doc/user/chains/: index.xml
doc/user/cp/: index.xml
doc/user/defaults/: index.xml
doc/user/device/: index.xml
doc/user/eppm/: index.xml
doc/user/exclusion/: index.xml
doc/user/file/: index.xml
doc/user/overview/: index.xml
doc/user/psf/: index.xml
doc/user/rendering/: index.xml
doc/user/scope/: index.xml
doc/user/tdf/: index.xml
doc/user/ui/: index.xml
doc/web/: Makefile  footer-html.txt  index.txt
doc/web/manuals/: index.txt
ipc/: ale-calibrate  box.h  stdin.h  xvp610_320x240.h
render/: combine.h  drizzle.h  hf_filter.h  ipc.h  merge.h
render/ipc/: ale-calibrate  box.h  stdin.h  xvp610_320x240.h
scripts/: ale-psf-calibrate  cpfmerge  sko2cpf  transform
testsuite/ale.00/: sanity.exp
testsuite/ale.01/: align.exp
testsuite/config/: unix.exp
ui/: help.h  implication.h  input.cc  input.h  ui.cc  ui.h  ui_gl.h  ui_log.cc  ui_log.h  ui_quiet.h  ui_tty.h  ui_wo.h  unsupported.h  util.h
(+38 files in other folders)
